Fix alignment issues (centering)

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,8 @@
 .bg-inverse {
-background-color:rgba(51,51,51,1)
+    background-color:rgba(51,51,51,1)
+}
+.col-md-6 p {
+    font-size: 16px;
 }
 .navbar {
     position: relative;
@@ -16,8 +19,30 @@ background-color:rgba(51,51,51,1)
 .hidden {
 	display: none;
 }
-p {
+.header h1 {
+	text-align: center;
+}
+.header p {
 	margin-bottom: 15px;
 	font-size: 21px;
 	font-weight: 200;
+}
+.registration {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.jumbotron {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	border-radius: 80px;
+}
+footer {
+	width: 1170px;
+	margin-left: auto;
+	margin-right: auto;
 }
